--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <header>
     <div class="inner">
         <h1>Havefive.GitHub.io</h1>
-        <h2>李兆才的Github</h2>
+        <h2>zhaocai的Github</h2>
         <a href="https://github.com/havefive" class="button"><small>Follow me on</small> GitHub</a>
     </div>
 </header>
