--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <h3>当前状态</h3>
 
             <p>
-                做了3年的前端相关工作，不算长，也不短，经常会看到大牛们分享的干货，也参加过一些论坛，这里总结一下自己掌握的，希望逐步完善自己的前端知识体系，提高自己。一些思路和想法都在脑子里，写完需要一定的时间，这里只是在一些空余时间来分享一下，形式上采用markdown来写。
+                做了3年的前端相关工作，不算长，也不短，随着经验的积累，和逐步完善自己的前端知识体系，希望在前端这条路上走好每一步。
             </p>
             
     </section>
