update about me

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <h3>主要资质</h3>
 
             <p>
-                专注于JavaScript和现代JS框架，如Zepto，React，Vue和Ember
+                专注于JavaScript和现代JS框架，如Zepto，React，Vue和Angular在移动端页面的实现和基于Android的Hybrid开发
             </p>
             <p>
                 使用CSS3并使用SASS
@@ -55,7 +55,14 @@
             <h3>当前状态</h3>
 
             <p>
-                做了3年的前端相关工作，不算长，也不短，随着经验的积累，和逐步完善自己的前端知识体系，希望在前端这条路上走好每一步。
+                做了4年的前端相关工作，随着经验的积累，逐步完善自己的前端知识体系，希望在前端这条路上走得更久更远。
+            </p>
+
+
+            <h3>联系方式</h3>
+
+            <p>
+                邮箱：lzc09008@gmail.com或923398543@qq.com
             </p>
             
     </section>
